# markgate

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  markgate.yaml.example  mkdocs.yml  pyproject.toml  sitemap.xml
backends/confluence/: index.html
backends/google-docs/: index.html
commands/: index.html
configuration/: index.html
contributing/: index.html
docs/: commands.md  configuration.md  contributing.md  index.md  install.md
docs/backends/: confluence.md  google-docs.md
install/: index.html
project_plans/docspan-release/: requirements.md
project_plans/docspan-release/implementation/: adversarial-review.md  plan.md  release-checklist.md  validation.md
project_plans/docspan-release/research/: architecture.md  features.md  google-docs-push.md  pitfalls.md  stack.md
project_plans/markgate-sync/: requirements.md
project_plans/markgate-sync/decisions/: ADR-001-merge3-dependency.md  ADR-002-base-content-sidecar-store.md
project_plans/markgate-sync/implementation/: adversarial-review.md  plan.md  validation.md
project_plans/markgate-sync/research/: architecture.md  features.md  pitfalls.md  stack.md
search/: search_index.json
src/docspan/: __init__.py  config.py
src/docspan/backends/: __init__.py  base.py
src/docspan/backends/confluence/: backend.py
src/docspan/backends/confluence/adf/: comparator.py  converter.py  converters.py  nodes.py  parser.py  visitors.py
src/docspan/backends/confluence/config/: loader.py  validation.py
src/docspan/backends/confluence/markdown/: __init__.py  parser.py
src/docspan/backends/confluence/models/: page.py  sync_status.py
src/docspan/backends/google_docs/: auth.py  backend.py  client.py  converter.py  docs_request_builder.py
src/docspan/cli/: main.py
src/docspan/core/: orchestrator.py  paths.py  state.py
src/markgate/backends/: base.py
src/markgate/backends/confluence/: backend.py
src/markgate/backends/confluence/adf/: __init__.py  comparator.py  converter.py  converters.py  interfaces.py  nodes.py  parser.py  validators.py  visitors.py
src/markgate/backends/google_docs/: auth.py  backend.py  client.py  docs_request_builder.py  docs_structure_parser.py  markdown_to_paragraph_parser.py
src/markgate/cli/: main.py
src/markgate/core/: __init__.py  merge.py  state.py
tests/: test_cli.py  test_config.py  test_conflict_resolution.py  test_docs_request_builder.py  test_docs_structure_parser.py  test_merge.py  test_orchestrator.py  test_state.py
(+35 files in other folders)
